crates/search/src/aggregation/snapshots/search__aggregation__reciprocal_rank__tests__multiple_keys_and_tables.snap
---
source: crates/search/src/aggregation/reciprocal_rank.rs
expression: "reciprocal_rank_fusion_sql([\"alpha\".to_string(),\n\"beta\".to_string()].as_slice(),\n[\"k1\".to_string(), \"k2\".to_string(), \"k3\".to_string()].as_slice(), &[], 2, 4)"
snapshot_kind: text
---
WITH alpha AS (
    SELECT
    *,
    ROW_NUMBER() OVER (ORDER BY score) AS rank
    FROM alpha
),
beta AS (
    SELECT
    *,
    ROW_NUMBER() OVER (ORDER BY score) AS rank
    FROM beta
)
SELECT
    TRUNC(coalesce(1.0/(alpha.rank + 2), 0) + coalesce(1.0/(beta.rank + 2), 0), 6) AS score,
    alpha.value AS value_0,
    beta.value AS value_1,
    coalesce(alpha.k1, beta.k1) as k1,
    coalesce(alpha.k2, beta.k2) as k2,
    coalesce(alpha.k3, beta.k3) as k3
FROM alpha
FULL OUTER JOIN beta ON 
    alpha.k1 = beta.k1 AND
    alpha.k2 = beta.k2 AND
    alpha.k3 = beta.k3
ORDER BY score DESC
LIMIT 4;
