crates/search/src/aggregation/snapshots/search__aggregation__reciprocal_rank__tests__single_table_single_key.snap
---
source: crates/search/src/aggregation/reciprocal_rank.rs
expression: "reciprocal_rank_fusion_sql(vec![\"bm25\".to_string()].as_slice(),\n[\"doc_id\".to_string()].as_slice(), &[], 42, 3,)"
snapshot_kind: text
---
WITH bm25 AS (
    SELECT
    *,
    ROW_NUMBER() OVER (ORDER BY doc_id) AS rank
    FROM bm25
)
SELECT
    TRUNC(coalesce(1.0/(bm25.rank + 42), 0), 6) AS score,
    bm25.value as value,
    coalesce(bm25.doc_id) as doc_id
FROM bm25

ORDER BY score DESC
LIMIT 3;
