crates/search/src/aggregation/snapshots/search__aggregation__reciprocal_rank__tests__three_tables_composite_key.snap
---
source: crates/search/src/aggregation/reciprocal_rank.rs
expression: "reciprocal_rank_fusion_sql([\"t1\".to_string(), \"t2\".to_string(),\n\"t3\".to_string()].as_slice(),\n[\"doc_id\".to_string(), \"section\".to_string()].as_slice(), &[], 100, 4)"
snapshot_kind: text
---
WITH t1 AS (
    SELECT
    *,
    ROW_NUMBER() OVER (ORDER BY doc_id, section) AS rank
    FROM t1
),
t2 AS (
    SELECT
    *,
    ROW_NUMBER() OVER (ORDER BY doc_id, section) AS rank
    FROM t2
),
t3 AS (
    SELECT
    *,
    ROW_NUMBER() OVER (ORDER BY doc_id, section) AS rank
    FROM t3
)
SELECT
    TRUNC(coalesce(1.0/(t1.rank + 100), 0) + coalesce(1.0/(t2.rank + 100), 0) + coalesce(1.0/(t3.rank + 100), 0), 6) AS score,
    t1.value AS value_0,
    t2.value AS value_1,
    t3.value AS value_2,
    coalesce(t1.doc_id, t2.doc_id, t3.doc_id) as doc_id,
    coalesce(t1.section, t2.section, t3.section) as section
FROM t1
FULL OUTER JOIN t2 ON 
    t1.doc_id = t2.doc_id AND
    t1.section = t2.section
FULL OUTER JOIN t3 ON 
    t1.doc_id = t3.doc_id AND
    t1.section = t3.section
ORDER BY score DESC
LIMIT 4;
