crates/search/src/aggregation/snapshots/search__aggregation__reciprocal_rank__tests__two_tables_additional_columns.snap
---
source: crates/search/src/aggregation/reciprocal_rank.rs
expression: "reciprocal_rank_fusion_sql(vec![\"bm25\".to_string(),\n\"vector\".to_string()].as_slice(), [\"doc_id\".to_string()].as_slice(),\n&[\"foo\".to_string(), \"bar\".to_string()], 5, 3)"
snapshot_kind: text
---
WITH bm25 AS (
    SELECT
    *,
    ROW_NUMBER() OVER (ORDER BY doc_id) AS rank
    FROM bm25
),
vector AS (
    SELECT
    *,
    ROW_NUMBER() OVER (ORDER BY doc_id) AS rank
    FROM vector
)
SELECT
    TRUNC(coalesce(1.0/(bm25.rank + 5), 0) + coalesce(1.0/(vector.rank + 5), 0), 6) AS score,
    bm25.value as value,
    coalesce(bm25.doc_id, vector.doc_id) as doc_id,
    coalesce(bm25.foo, vector.foo) as foo,
    coalesce(bm25.bar, vector.bar) as bar
FROM bm25
FULL OUTER JOIN vector ON 
    bm25.doc_id = vector.doc_id
ORDER BY score DESC
LIMIT 3;
